syntax = "proto3";

package todoPackage;

service TodoService {
  rpc createTodo (TodoItem) returns (TodoItem) {}
  rpc readTodos (Empty) returns (TodoItems) {}
  rpc readTodosStream (Empty) returns (stream TodoItem) {}
}

message TodoItem {
  string id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}

message Empty {}